syntax = "proto3";

package openbao.pki;

option go_package = "github.com/openbao/openbao/builtin/logical/pki";

import "google/protobuf/timestamp.proto";

message PKIX {
    message Name {
        repeated string Country = 1;
        repeated string Organization = 2;
        repeated string OrganizationUnit = 3;
        repeated string Locality = 4;
        repeated string Province = 5;
        repeated string StreetAddress = 6;
        repeated string PostalCode = 7;
        string SerialNumber = 8;
        string CommonName = 9;
    }
    message Extension {
        repeated int64 Id  = 1;
        bool Critical = 2;
        bytes Value = 3;
    }
}

message ObjectIdentifier {
    // 1.2.840.113549 → [1, 2, 840, 113549]
    repeated uint32 arc = 1;
}

message net {
    message IP {
        bytes IP = 1;
    }
    message IPNet {
        net.IP IP = 1;          // network number
        IPMask Mask = 2;
    }
    message IPMask {
        bytes IPMask = 1;
    }
}

message Userinfo {
    string username      = 1;   // RFC‑2396 allows empty.
    string password      = 2;   // Empty when not supplied.
    bool   password_set  = 3;   // If true, then password field is meaningful.
}

message url {
    message URL {
        string Scheme = 1;
        string Opaque = 2;
        Userinfo User = 3;
        string Host = 4;
        string Path = 5;
        string RawPath = 6;
        bool OmitHost = 7;
        bool ForceQuery = 8;
        string RawQuery = 9;
        string Fragment = 10;
        string RawFragment = 11;
    }
}

// An OID represents an ASN.1 OBJECT IDENTIFIER.
message OID {
    repeated uint64 arc = 1;    // 1.2.840.113549 → [1, 2, 840, 113549]
}

message PolicyMapping {	
    OID IssuerDomainPolicy = 1;	
    OID SubjectDomainPolicy = 2;
}

enum KeyUsage {
    KeyUsageUnspecified = 0;
    KeyUsageDigitalSignature = 1;
    KeyUsageContentCommitment = 2;
    KeyUsageKeyEncipherment = 3;
    KeyUsageDataEncipherment = 4;
    KeyUsageKeyAgreement = 5;
    KeyUsageCertSign = 6;
    KeyUsageCRLSign = 7;
    KeyUsageEncipherOnly = 8;
    KeyUsageDecipherOnly = 9;
}

enum ExtKeyUsage {
    ExtKeyUsageAny = 0;
    ExtKeyUsageServerAuth = 1;
    ExtKeyUsageClientAuth = 2;
    ExtKeyUsageCodeSigning = 3;
    ExtKeyUsageEmailProtection = 4;
    ExtKeyUsageIPSECEndSystem = 5;
    ExtKeyUsageIPSECTunnel = 6;
    ExtKeyUsageIPSECUser = 7;
    ExtKeyUsageTimeStamping = 8;
    ExtKeyUsageOCSPSigning = 9;
    ExtKeyUsageMicrosoftServerGatedCrypto = 10;
    ExtKeyUsageNetscapeServerGatedCrypto = 11;
    ExtKeyUsageMicrosoftCommercialCodeSigning = 12;
    ExtKeyUsageMicrosoftKernelCodeSigning = 13;
}

message ValidationOutput {
    CertTemplate template = 1;
    string issuer_ref = 2;
    bool use_pss = 3;
    uint32 signature_bits = 4;
    bool generate_lease = 5;
    bool no_store = 6;

    // Warnings about the request or adjustments made by the CEL policy engine.
    // E.g., "common_name was empty so added example.com"
    repeated string warnings = 7;

    // For CSR:
    bytes subject_key_id = 8; // This value is auto-computed by certutil for generated keys.

    // For key generation/"issue"
    string key_type = 9;
    uint64 key_bits = 10;
}

// Mirrors x509.Certificate
message CertTemplate {
    int64 Version = 1;
    PKIX.Name Subject = 2;
    google.protobuf.Timestamp NotBefore = 3;
    google.protobuf.Timestamp NotAfter  = 4;
    KeyUsage KeyUsage = 5;
    
    repeated PKIX.Extension ExtraExtensions = 6;

    repeated ExtKeyUsage ExtKeyUsage = 7;
    repeated ObjectIdentifier UnknownExtKeyUsage = 8;

    bool BasicConstraintsValid = 9;
    bool IsCA = 10;

    int64 MaxPathLen = 11;
    bool MaxPathLenZero = 12;

    bytes SubjectKeyId = 13;

    repeated string DNSNames = 14;
    repeated string EmailAddresses = 15;
    repeated net.IP IPAddresses = 16;
    repeated url.URL URIs = 17;

    // Name constraints
    bool PermittedDNSDomainsCritical = 18; // if true then the name constraints are marked critical.
    repeated string PermittedDNSDomains = 19;
    repeated string ExcludedDNSDomains = 20;
    repeated net.IPNet PermittedIPRanges = 21;
    repeated net.IPNet ExcludedIPRanges = 22;
    repeated string PermittedEmailAddresses = 23;
    repeated string ExcludedEmailAddresses = 24;
    repeated string PermittedURIDomains = 25;
    repeated string ExcludedURIDomains = 26;

    repeated ObjectIdentifier PolicyIdentifiers = 27;
    repeated OID Policies = 28;

    int64 InhibitAnyPolicy = 29;
    bool InhibitAnyPolicyZero = 30;

    int64 InhibitPolicyMapping = 31;
    bool InhibitPolicyMappingZero = 32;

    int64 RequireExplicitPolicy = 33;
    bool RequireExplicitPolicyZero = 34;
    repeated PolicyMapping PolicyMappings = 35;
}
